[project]
name = "rl"
version = "0.1.1"
description = "Personal reproduce of methods and problems in the best RL book."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jsonargparse[all]>=4.37.0",
    "jsonnet==0.21.0rc2",
    "scipy>=1.15.2",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.67.1",
    "ipdb>=0.13.13",
    "pygame>=2.6.1",
    "pylint>=3.3.5",
    "flake8>=7.1.2",
    "black>=25.1.0",
    "ruff>=0.11.1",
]

[tool.black]
line-length = 120
target-version = ["py310"]
include = '\.pyi?$'

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 100
indent-width = 4

# Assume Python 3.9
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",
    "D101",
    "D102",
    "D104",
    "D203",
    "D212",
    "D213",
    "T201",
    "EM101",
    "S311",
    "FBT001",
    "FBT002",
    "TRY003",
    "COM812",
    "NPY002",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF010"
]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.lint.pylint]
max-args = 10
